bk_ida/gccida/g1/hard_reg_set_here_p
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/hard_reg_set_here_p/src/reload.c:2508:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v4.rtwint = ( __int64)x->fld[0]; 
                      ^~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/hard_reg_set_here_p/src/reload.c:2519:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v10 = ( ( unsigned int)( mode_class_0[*( unsigned __int8 *)( v4.rtwint + 2)] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/hard_reg_set_here_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/hard_reg_set_here_p/src/obj/reload.o] Error 1
